docs: update documentation and cleanup files
- Update README files with improved Docker instructions

- Remove redundant README.dev.md

- Update development environment configuration

- Remove deprecated test-production.sh script

- Update package-lock.json dependencies

--- a/.env.development
+++ b/.env.development
@@ -1,17 +1,45 @@
-# Application
-NODE_ENV=development
-NEXT_PUBLIC_PORT=21971
+# Development Environment Configuration
 
-# Database
-DB_USER=tgeld_admin
-DB_PASSWORD=dev_password
-DB_DATABASE=tgeld
+# Node environment
+NODE_ENV=development
+
+# Database Configuration (for local development)
 DB_HOST=localhost
 DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=tgeld_dev_2024
+DB_DATABASE=tgeld
 
-# Storage
+# Database Connection URL (used by Prisma)
+DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}
+
+# File Storage
 UPLOAD_PATH=./uploads
 
 # Feature Flags
 ENABLE_ANALYTICS=false
 ENABLE_BACKUP=true
+
+# Security Settings
+SESSION_SECRET=change_this_to_a_secure_random_string
+
+# ==============================================
+# Environment Setup Instructions
+# ==============================================
+#
+# For Local Development:
+# 1. Copy this file: cp .env.example .env.local
+# 2. Keep NODE_ENV=development
+# 3. Use DB_HOST=localhost
+# 4. Use UPLOAD_PATH=./uploads
+#
+# Security Requirements:
+# 1. Never commit .env files to version control
+# 2. Password Requirements:
+#    - Minimum 12 characters
+#    - Mix of uppercase and lowercase letters
+#    - Include numbers and special characters
+#    - Avoid characters that need URL escaping
+#
+# Directory Setup:
+# - Ensure the UPLOAD_PATH directory exists and is writable
