--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: tgeld:prod-test
+    image: tgeld/tgeld:latest
     ports:
       - "${PORT:-3000}:3000"
     environment:
@@ -37,9 +37,6 @@ services:
       - type: volume
         source: postgres_prod_data
         target: /var/lib/postgresql/data
-        labels:
-          - "com.tgeld.data=postgres"
-          - "com.tgeld.environment=production"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_DATABASE:-tgeld}"]
       interval: 5s
