--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     ports:
       - "${PORT:-3000}:3000"
     environment:
-      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD}@${DB_HOST:-db}:${DB_PORT:-5432}/${DB_DATABASE:-tgeld}?schema=public
-      - DB_USER=${DB_USER:-postgres}
+      - DATABASE_URL=postgresql://postgres:${DB_PASSWORD}@db:5432/tgeld?schema=public
+      - DB_USER=postgres
       - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=${DB_HOST:-db}
-      - DB_PORT=${DB_PORT:-5432}
-      - DB_DATABASE=${DB_DATABASE:-tgeld}
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_DATABASE=tgeld
       - NODE_ENV=production
       - NEXT_TELEMETRY_DISABLED=1
     depends_on:
