--- a/.github/workflows/version-release.yml
+++ b/.github/workflows/version-release.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
     paths:
       - 'version.txt'
+  workflow_dispatch:  # Allow manual triggering
 
 permissions:
   contents: write
