feat: Add automatic version increment on main branch pushes [minor]
- Auto-increment patch version on every push to main
- Use feat: or [minor] in commit for minor version bump
- Use BREAKING CHANGE or [major] for major version bump
- Prevents bot commit loops with [bot] detection
- Fully automated CI/CD pipeline now handles versioning

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,6 +8,7 @@ on:
       - 'docs/theme-system-research.md'
       - 'docs/color-system/**'
       - '.archive/**'
+      - '.github/workflows/auto-version.yml'
   pull_request:
     branches: [main]
     paths-ignore:
