fix: Ensure Prisma migrations are included in Docker image
- Explicitly copy migrations directory in Dockerfile.prod
- Add better diagnostics for missing migration files
- Document the issue and fix in CLAUDE.md
- Fixes 'No migration found' error on Portainer and other platforms

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -17,7 +17,9 @@ RUN apk add --no-cache \
 
 # Copy package files
 COPY package*.json ./
-COPY prisma ./prisma/
+# Copy Prisma schema and migrations explicitly to ensure subdirectories are included
+COPY prisma/schema.prisma ./prisma/
+COPY prisma/migrations ./prisma/migrations/
 
 # Install dependencies and sharp for image optimization
 RUN npm ci && npm install sharp
